assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

                                        /* General Styles */

body {
    width: 100vw;
    min-height: 100vh;
    background-color: #E2E6EA;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-family: Gloria Hallelujah, sans-serif;
}

header {
    width: 100%;
    display: flex;
    justify-content: center;
}

footer {
    display: flex;
    justify-content: space-evenly;
    align-items: baseline;
}

h1 {
    text-align: center;
}

h2 {
    font-size: 150%;
    text-transform: uppercase;
    color: #FFB140;
    font-weight: bolder;
}

section {
/*  max-width: 100vw;
    margin: 10px auto; */
    margin: 20px;
    padding: 20px;  
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #475B63;
    color: #E2E6EA;
    border-radius: 10px;
    box-shadow: 3px 3px black;
}

li {
    list-style-type: none;
    text-align: center;
    margin-left: 10px;
    margin-right: 10px;
}



i {
    color: black;
}

#social-networks {
    width: 500px;
    font-size: 1.5em;
    display: flex;
    justify-content: space-between;
}

img {
    max-width: 50vw;
    max-height: 50vh;
    margin: 0;
}

a {
    text-decoration: none;
    color: #986C6A;
    text-align: center;
}

a:hover {
    text-decoration: underline;
}

                                        /* Popup Styles */
form {
    background-color: #475B63;
    margin: 20px;
    justify-content: center;
    width: auto;
}

form div {
    text-align: left;
    margin: 10px;
    display: flex;
    flex-direction: column;
}

form h2,
#popup-instructions h2 {
    font-size: 120%;
    text-transform: none;
    text-align: center;
}

#popup-feedback,
#popup-instructions {
    z-index: 5;
    display: none;
    position: absolute;
    background-color: #475B63;
    top: 100px;
    left: 10px;
    right: 10px;
    margin: auto;
    box-shadow: 3px 3px black;
    border-radius: 10px;
    border: 2px solid black;


 }

                                        /* Game Area */

#board {
    background-color: #986C6A;
    margin: 20px 50px;
    display: grid;
    grid-template-columns: repeat(3, auto);
    cursor: pointer;
    position: relative;
}

.cell {
    width: 150px;
    height: 150px;
    font-size: 7em;
    display: flex;
    justify-content: center;
    align-items: center;
    border-right: 3px solid;
    border-bottom: 3px solid;
}
/* The code to remove the outher borders was adapted from an article
by Patricia Nicole Opetina on dev.to */
.cell:nth-child(3n) {
    border-right: none;
}

.cell:nth-child(6) ~ .cell {
    border-bottom: none;
}

.x-hover:hover::after {
    content: "X";
    opacity: 0.5;
    color: white;
}
  
.o-hover:hover::after {
    content: "O";
    opacity: 0.5;
    color: white;
}

.hidden {
    display: none;
}

.visible {
    display: block;
}

                                        /* Buttons */

.buttons {
    width: auto;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

button {
    margin: 20px;
    padding: 10px;
    border-radius: 10px;
    background-color: #E2E6EA;
    box-shadow: 3px 3px black;
    font-family: "Gloria Hallelujah", sans-serif;
    font-size: 1em;
    cursor: pointer;
}

button:hover {
    background-color: black;
    color: #E2E6EA;
}

button i:hover {                                        /* how to make the image switch colors when the button is hovered, not just the image ?*/
    color: #E2E6EA;
}

/* Media Query: laptops and larger screens (992px and up)
@media screen and (min-width: 992px) {

   /*  body {
        width: 100vw;
        min-height: 100vh;
    } 

    section {
        max-width: 100vw;
        margin: 10px auto;
    }   

    #board {
        margin: 20px 50px;
        display: grid;
    }

    .cell {
        width: 150px;
        height: 150px;
        font-size: 7em;
    }
  }  */

